--- a/web/css/main.css
+++ b/web/css/main.css
@@ -31,6 +31,7 @@ a {
     -moz-transition: 300ms;
     -o-transition: 300ms;
     transition: 300ms;
+    color: #696763;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -1187,7 +1188,7 @@ h2.title {
 
 .view-product img {
     border: 1px solid #F7F7F0;
-    height: 380px;
+    /*height: 380px;*/
     width: 100%;
 }
 
